<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.makalaster.wastelandwares.shopWares.ShoppingFragment">

</android.support.v7.widget.RecyclerView>
